mm-1 fixed items 1-7
# On Record List screen, Add Record button should be blue by default.
(This changes to Actions if any of the article checkboxes are checked.)
# On Record list screen, the filtered search dropdown menu is missing a
dropdown arrow icon.
# On Record List screen, remove all the space within the Issue
subsection when they contain no articles
# On Deposit History screen. Deposit History date box’s are two
different colours. Please make both #e5e5e5.
# On Article screen, funding section: the grant number field title for
grant number 2/3/4/... is too close to the box above.
# On the Deposit Cart screen, add an inner border to the Deposit Cart
frame containing the rows in the deposit cart.

--- a/app/styles/AddArticle.scss
+++ b/app/styles/AddArticle.scss
@@ -519,7 +519,7 @@ input.height64, textarea.height64, select.height64 {
                   font: {
                     weight: bold;
                   }
-                  padding: 0 0 10px 0;
+                  padding: 10px 0 10px 0;
                   text-align: left;
                 }
                 .grantRemove {
