--- a/app/styles/DepositHistory.scss
+++ b/app/styles/DepositHistory.scss
@@ -44,7 +44,7 @@
             padding: 22px 32px;
         }
         .start{
-            background: #F5F5F5;
+            background: #EAEAEA;
             float: left;
         }
         .end{
